err/libdoug.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/args-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/clint'...
Listing './lib/python3.5/site-packages/clint/packages'...
Listing './lib/python3.5/site-packages/clint/packages/colorama'...
Listing './lib/python3.5/site-packages/clint/textui'...
Listing './lib/python3.5/site-packages/clint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/auth'...
Listing './lib/python3.5/site-packages/docker/ssladapter'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker/utils/ports'...
Listing './lib/python3.5/site-packages/docker_py-1.10.6.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/libdoug'...
Listing './lib/python3.5/site-packages/libdoug/api'...
Compiling './lib/python3.5/site-packages/libdoug/api/flags.py'...
***   File "./lib/python3.5/site-packages/libdoug/api/flags.py", line 437
    print 'UNKOWN FLAG: ', item
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libdoug/conflict_resolution.py'...
***   File "./lib/python3.5/site-packages/libdoug/conflict_resolution.py", line 66
    print u'  │├╼', _format(json.loads(sl))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libdoug/dependency_walker.py'...
***   File "./lib/python3.5/site-packages/libdoug/dependency_walker.py", line 35
    print ts.formatline(image, islast)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libdoug/history.py'...
***   File "./lib/python3.5/site-packages/libdoug/history.py", line 96
    print "  %s" % (img)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libdoug/optimistic_solver.py'...
***   File "./lib/python3.5/site-packages/libdoug/optimistic_solver.py", line 58
    print " Nothing to do"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libdoug/registry.py'...
***   File "./lib/python3.5/site-packages/libdoug/registry.py", line 84
    print 'Bad response code: %d\nText:\n%s' %\
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libdoug/token.py'...
***   File "./lib/python3.5/site-packages/libdoug/token.py", line 144
    print "Purging expired token:", p.gettoken().gettoken()
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libdoug/vr_solver.py'...
***   File "./lib/python3.5/site-packages/libdoug/vr_solver.py", line 79
    print ' Repo not conforming to Version-Release updating'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libdoug-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.4.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
